--- a/styles/styles.css
+++ b/styles/styles.css
@@ -562,7 +562,7 @@ section {
 }
 
 .website .links {
-  margin-top: 50px;
+  padding-top: 50px;
   padding-bottom: 0px;
   width: 100%;
 }
@@ -572,7 +572,11 @@ section {
   color: black;
   border: 1px solid black;
   border-radius: 15px;
-  margin: 0 15px;
+  margin: 0 auto;
+}
+
+.links a:last-child {
+  margin-left: 15px;
 }
 
 .links a:hover,
